# aoc-2021

./: README.md  aoc.hsfiles
day01/: day01.cabal  input.txt
day01/src/: Main.hs
day02/: day02.cabal
day02/src/: Main.hs
day03/: day03.cabal
day03/src/: Main.hs
day04/: day04.cabal
day04/src/: Main.hs
day05/: day05.cabal
day05/src/: Main.hs
day06/: day06.cabal
day06/src/: Main.hs
day07/: day07.cabal
day07/src/: Main.hs
day08/: day08.cabal
day08/src/: Main.hs
day09/: day09.cabal
day10/: day10.cabal
day10/src/: Main.hs
day11/: day11.cabal
day11/src/: Main.hs
day12/: day12.cabal
day12/src/: Main.hs
day13/: day13.cabal
day13/src/: Main.hs
day14/: day14.cabal
day14/src/: Main.hs
day15/: LICENSE  day15.cabal
day15/src/: Main.hs
day16/: day16.cabal
day16/src/: Main.hs
day17/: day17.cabal
day18/: day18.cabal
day18/src/: Main.hs
day19/: day19.cabal
day20/: day20.cabal
day21/: day21.cabal
day22/: day22.cabal
day23/: day23.cabal
day24/: day24.cabal
day25/: day25.cabal
