name:                day01
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Alan Malloy
maintainer:          alan@malloys.org
copyright:           2021 Alan Malloy
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable day01
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:
              -Wall
              -Wcompat
              -Wincomplete-uni-patterns
              -Wredundant-constraints
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , parsec
                     , regex-applicative
                     , recursion-schemes
                     , lens
                     , mtl
                     , transformers
